完成首页布局样式

--- a/src/styles/common/global.styl
+++ b/src/styles/common/global.styl
@@ -1,2 +1,15 @@
 @import '_variables'
 @import '_atom'
+@import '_mixins'
+
+body
+    padding-top 88px
+
+.font-24
+    fontSize(24px)
+
+.font-28
+    fontSize(28px)
+
+.font-36
+    fontSize(36px)
