--- a/src/styles/common/reset.styl
+++ b/src/styles/common/reset.styl
@@ -3,6 +3,7 @@ html, body
   padding 0
   font-family 'PingFang SC', Verdana, 'Helvetica Neue', 'Microsoft Yahei', 'Hiragino Sans GB', 'Microsoft Sans Serif', 'WenQuanYi Micro Hei', 'Open Sans', sans-serif
   font-weight 300
+  width 750px
   height 100%
   -webkit-font-smoothing antialiased
   font-smoothing antialiased
