--- a/src/styles/common/_mixins.styl
+++ b/src/styles/common/_mixins.styl
@@ -1,13 +1,21 @@
+// 首页头部图标
 homeBgIcon(width, height, url)
     width width
     height height
     background url(url)
     background-size contain
 
+// 字体大小
 fontSize(size)
     font-size size
 
+// 单行省略
 ellipsis()
     text-overflow ellipsis
     overflow hidden
     white-space nowrap
+
+// 返回按钮
+backBtn()
+    background url('~assets/images/back.png')
+    background-size contain
