--- a/src/styles/common/global.styl
+++ b/src/styles/common/global.styl
@@ -2,14 +2,17 @@
 @import '_atom'
 @import '_mixins'
 
-body
-    padding-top 88px
-
 .font-24
     fontSize(24px)
 
 .font-28
     fontSize(28px)
+
+.font-30
+    fontSize(30px)
+
+.font-32
+    fontSize(32px)
 
 .font-36
     fontSize(36px)
