--- a/src/views/home/index.styl
+++ b/src/views/home/index.styl
@@ -26,6 +26,7 @@
 
     &-banner
         position relative
+        padding-top 88px
 
         & /deep/ .ant-carousel .slick-slide
             text-align center
@@ -101,20 +102,21 @@
             display flex
             flex-wrap wrap
             align-content center
-            justify-content: space-around  
+            justify-content space-around
 
             &-item
                 width 346px
-                margin-bottom: 36px
-                img 
+                margin-bottom 36px
+
+                img
                     width 100%
                     height 346px
                     margin-bottom 10px
 
                 h6
-                    margin-bottom: 6px
+                    margin-bottom 6px
 
                 p
                     color #8d8d8d
-                    font-weight: 500
+                    font-weight 500
                     ellipsis()
