增加首页回到顶部功能

--- a/src/views/home/index.styl
+++ b/src/views/home/index.styl
@@ -120,3 +120,22 @@
                     color #8d8d8d
                     font-weight 500
                     ellipsis()
+
+.go-top
+    width 90px
+    height 90px
+    background-color rgba(0, 0, 0, 0.5)
+    border-radius 50%
+    text-align center
+    position fixed
+    z-index 999
+    bottom 100px
+    right 12px
+    color #fff
+
+    &-fav
+        width 32px
+        height 18px
+        margin 20px auto 8px
+        background url('~assets/images/arrow-top.png') no-repeat
+        background-size contain
