添加公共header和nav组件

--- a/src/views/home/index.styl
+++ b/src/views/home/index.styl
@@ -1,5 +1,5 @@
-@import '~@/styles/common/_mixins.styl'
-@import '~@/styles/common/_variables.styl'
+@import '~styles/common/_mixins.styl'
+@import '~styles/common/_variables.styl'
 
 .home
     &-header
@@ -22,7 +22,7 @@
             homeBgIcon(186px, 56px, '~assets/images/logo.png')
 
         &-search
-            homeBgIcon(50px, 50px, '~assets/images/search.png')
+            homeBgIcon(50px, 50px, '~assets/images/search_light.png')
 
     &-banner
         position relative
