--- a/src/components/commonNav/index.styl
+++ b/src/components/commonNav/index.styl
@@ -1,15 +1,14 @@
 .common-nav
     display flex
-    flex-wrap: wrap
-    align-items: center
-    // justify-content: space-around
+    flex-wrap wrap
+    align-items center
 
     &-item
-        flex-basis: 20%
-        text-align: center
-        font-weight: 400
+        flex-basis 20%
+        text-align center
+        font-weight 400
         padding 20px 0
         color #000
-    
+
     &-active
         color #e7370c
