--- a/src/components/bookList/index.styl
+++ b/src/components/bookList/index.styl
@@ -2,6 +2,7 @@
 
 .book-list
     &-item
+        position relative
         display flex
         align-items center
         width 100%
@@ -32,6 +33,33 @@
                 color #333
                 font-weight 500
                 ellipsis()
+
+        &-sort
+            width 99px
+            height 56px
+            margin auto
+            position absolute
+            top 0
+            right 40px
+            bottom 0
+
+        .first
+            background url('~assets/images/ranking/sort_01.png')
+
+        .second
+            background url('~assets/images/ranking/sort_02.png')
+
+        .third
+            background url('~assets/images/ranking/sort_03.png')
+
+        .others
+            display flex
+            align-items center
+            justify-content center
+            width 52px
+            height 50px
+            right 60px
+            background url('~assets/images/ranking/sort_04.png')
 
     &-item:last-child
         border-bottom 1px solid #ddd
