添加历史页面删除按钮

--- a/src/views/history/index.styl
+++ b/src/views/history/index.styl
@@ -35,6 +35,15 @@
                 color #e7370c
                 font-weight 500
 
+        &-del
+            width 34px
+            height 38px
+            background url('~assets/images/delete.png') no-repeat
+            background-size contain
+            position absolute
+            top 26px
+            right 36px
+
     & .active:after
         content ''
         width 80px
