将放回按钮提取成公共组件

--- a/src/views/mine/login/index.styl
+++ b/src/views/mine/login/index.styl
@@ -10,14 +10,6 @@
         background-image url('~assets/images/login/bg_01.png')
         background-size cover
 
-        &-back
-            position absolute
-            width 46px
-            height 26px
-            top 44px
-            left 32px
-            backBtn()
-
         &-register
             position absolute
             top 22px
@@ -78,7 +70,7 @@
             align-items center
 
             span:nth-child(2)
-                font-weight: 500
+                font-weight 500
 
             span:not(:nth-child(2))
                 flex 1
@@ -96,6 +88,7 @@
                 height 86px
 
             &-qq
-                background: url('~assets/images/login/qq.png')
+                background url('~assets/images/login/qq.png')
+
             &-weibo
-                background: url('~assets/images/login/weibo.png')
+                background url('~assets/images/login/weibo.png')
