--- a/src/views/mine/register/index.styl
+++ b/src/views/mine/register/index.styl
@@ -10,14 +10,6 @@
         background-image url('~assets/images/login/bg_01.png')
         background-size cover
 
-        &-back
-            position absolute
-            width 46px
-            height 26px
-            top 44px
-            left 32px
-            backBtn()
-
         &-pic
             width 374px
             height 368px
@@ -63,7 +55,7 @@
         padding 0 64px
 
         p
-            text-align: right
+            text-align right
             font-weight 400
 
             a
