--- a/src/components/commonHeader/index.styl
+++ b/src/components/commonHeader/index.styl
@@ -1,9 +1,10 @@
 @import '~styles/common/_mixins.styl'
 
 .common-header
+    position relative
     display flex
     align-items center
-    justify-content space-between
+    justify-content center
     width 100%
     background #fff
     height 90px
@@ -23,7 +24,13 @@
         homeBgIcon(186px, 56px, '~assets/images/logo.png')
 
 .common-header-search-light
+    position absolute
+    top 24px
+    right 24px
     homeBgIcon(50px, 50px, '~assets/images/search_light.png')
 
 .common-header-search-dark
+    position absolute
+    top 24px
+    right 24px
     homeBgIcon(42px, 42px, '~assets/images/search_dark.png')
