完成搜索页面

--- a/src/styles/common/reset.styl
+++ b/src/styles/common/reset.styl
@@ -8,6 +8,9 @@ html, body
   font-smoothing antialiased
   text-rendering optimizeLegibility
 
+html *
+  color #000
+
 div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, blockquote, p
   padding 0
   margin 0
@@ -60,7 +63,6 @@ a:focus, button:focus, input:focus
 
 input, textarea
   font-family 'PingFang SC', Verdana, 'Helvetica Neue', 'Microsoft Yahei', 'Hiragino Sans GB', 'Microsoft Sans Serif', 'WenQuanYi Micro Hei', 'Open Sans', sans-serif
-  font-weight 300
 
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
   -webkit-appearance none !important
