--- a/src/views/explore/index.styl
+++ b/src/views/explore/index.styl
@@ -15,9 +15,6 @@
             display flex
             align-items center
             width 70%
-            height 0.8rem
-            padding 0 0.26666667rem 0 0.8rem
-            border none
             border-radius 6px
 
             &-icon
@@ -37,4 +34,58 @@
                 height 60px
                 padding 0 20px 0 60px
                 border none
-                border-radius 6px
+                border-radius 12px
+
+        &-btn
+            color #fff
+            font-weight 500
+            position absolute
+            top 22px
+            right 26px
+
+    &-recommend
+        box-sizing border-box
+        width 100%
+        margin 0 auto
+        padding 30px 20px
+
+        &-title
+            display flex
+            align-items center
+            justify-content space-between
+
+            &-text
+                color #8b8b8b
+
+            &-btn
+                position relative
+                display flex
+                align-items center
+                clor #8b8b8b
+
+                &-icon
+                    width 26px
+                    height 24px
+                    background red
+                    margin 0 6px 0 0
+                    background url('~assets/images/explore/reflash.png') no-repeat
+                    background-size contain
+
+        &-content
+            display flex
+            align-items center
+            flex-wrap wrap
+            width 100%
+            margin 30px 0 0
+
+            &-item
+                display flex
+                align-items center
+                box-sizing border-box
+                justify-content center
+                height 0.90666667rem
+                padding 0 0.26666667rem
+                margin 0 0.26666667rem 0.26666667rem 0
+                font-weight 500
+                border 1px solid #ddd
+                border-radius 20px
