--- a/src/views/detail/index.styl
+++ b/src/views/detail/index.styl
@@ -1,3 +1,182 @@
+@import '~styles/common/_mixins.styl'
+
+.active:after
+    content ''
+    width 154px
+    height 14px
+    background url('~assets/images/detail/detail_tab_active.png') no-repeat
+    background-size contain
+    position absolute
+    left 0
+    right 0
+    bottom 0
+    margin 0 auto
+
+.filter
+    filter blur(50px)
+
 .detail
     &-header
+        display flex
+        justify-content center
+        align-items center
+        width 10rem
+        height 80px
+        text-align center
+        position fixed
+        z-index 999
+        top 0
+        left 0
+        right 0
+        margin auto
+
+        &-home
+            width 42px
+            height 41px
+            background url('~assets/images/detail/home.png') no-repeat
+            background-size contain
+            position absolute
+            top 20px
+            right 80px
+
+        &-share
+            width 37px
+            height 42px
+            background url('~assets/images/detail/share.png') no-repeat
+            background-size contain
+            position absolute
+            top 19px
+            right 20px
+
+    &-top
         position relative
+        width 750px
+        height 450px
+        margin 0 auto
+        overflow hidden
+
+        &-cover
+            width 100%
+            height 450px
+            background url('~assets/images/detail/detail_01.jpg')
+            background-repeat repeat
+            background-size cover
+            position absolute
+            z-index -1
+            left 0
+            top 0
+
+        &-group
+            display flex
+            margin 80px 0 0 0
+            padding-left 40px
+
+            &-pic
+                width 245px
+                height 325px
+                background-image url('~assets/images/detail/detail_01.jpg')
+                margin-right 40px
+
+            &-info
+                max-width 55%
+                height 325px
+                color #fff
+
+                &-title
+                    color inherit
+                    margin-top 20px
+
+                &-type
+                    color inherit
+                    margin-top 20px
+
+                &-stars
+                    margin-top 40px
+
+                    &-item
+                        display inline-block
+                        width 28px
+                        height 26px
+                        background url('~assets/images/detail/star_red.png') no-repeat
+                        margin-right 10px
+
+                &-fans
+                    color inherit
+                    margin-top 20px
+
+    &-tab
+        display flex
+        align-items center
+        height 76px
+        border-bottom 1px solid #999
+
+        &-item
+            flex 1
+            height 100%
+            display flex
+            align-items center
+            justify-content center
+            position relative
+
+        &-item:not(:last-child):before
+            content ''
+            width 0
+            height 20px
+            border-left 1px solid #999
+            position absolute
+            top 28px
+            right 0
+
+    &-list
+        display flex
+        align-items center
+        justify-content space-between
+        flex-wrap wrap
+        padding 0 24px
+        margin 34px auto 15px
+
+        &-title
+            display flex
+            align-items center
+            justify-content space-between
+            width 100%
+
+            &-text
+                max-width 86%
+                ellipsis()
+
+            &-btn
+                display flex
+                align-items center
+                justify-content space-around
+
+                &-icon
+                    width 30px
+                    height 30px
+                    background url('~assets/images/detail/down.png')
+                    margin-right 10px
+
+        &-container
+            display flex
+            flex-wrap wrap
+            align-items center
+            justify-content space-between
+            margin-top 24px
+            width 100%
+
+            &-item
+                position relative
+                display flex
+                align-items center
+                justify-content space-between
+                width 48%
+                height 58px
+                margin 0 0 16px
+                padding 0 20px
+                border 1px solid #d8d8d8
+                border-radius 4px
+
+                &-lock
+                    width 20px
+                    height 24px
+                    background url('~assets/images/detail/lock.png') no-repeat
