完成评论组件

--- a/src/views/detail/index.styl
+++ b/src/views/detail/index.styl
@@ -180,3 +180,26 @@
                     width 20px
                     height 24px
                     background url('~assets/images/detail/lock.png') no-repeat
+
+    &-intro
+        &-desc
+            box-sizing border-box
+            width 750px
+            margin 0 auto
+            padding 30px 25px
+            color #333
+            line-height 1.6
+            word-break break-all
+            border-bottom 1px solid #ddd
+
+        &-introduce
+            display flex
+            flex-direction column
+            height 159px
+            border-bottom 1px solid #ddd
+
+            p
+                flex 1
+                line-height 80px
+                margin-left 28px
+                color #222
