修复切换分辨率不响应式的bug

--- a/src/views/home/index.styl
+++ b/src/views/home/index.styl
@@ -61,7 +61,8 @@
                 margin-top 10px
 
     &-recommend
-        width 750px
+        width 100%
+        margin 0 auto
 
         &-divide
             width inherit
@@ -105,7 +106,7 @@
             justify-content space-around
 
             &-item
-                width 346px
+                width 48%
                 margin-bottom 36px
 
                 img
