--- a/src/styles/common/reset.styl
+++ b/src/styles/common/reset.styl
@@ -2,7 +2,7 @@ html, body
   margin 0
   padding 0
   font-family 'PingFang SC', Verdana, 'Helvetica Neue', 'Microsoft Yahei', 'Hiragino Sans GB', 'Microsoft Sans Serif', 'WenQuanYi Micro Hei', 'Open Sans', sans-serif
-  width 750px
+  width 100% // 这个地方要是写750px就会出现切换chrome控制台的分辨率不会正常显示的情况
   height 100%
   -webkit-font-smoothing antialiased
   font-smoothing antialiased
